# OOP_Lab5

./: CMakeLists.txt  README.md
src/: dynamic_array.cpp  dynamic_array.h  iterator.h  main.cpp  memory_resource.cpp  memory_resource.h  person.h  test_struct.h
tests/: test_all.cpp
